-
Bug
-
Resolution: Fixed
-
P2: Important
-
6.8, 6.9
-
None
-
785bf6060 (dev), 68f92d3d3 (6.8)
Steps to reproduce in surfacegallery > Oscillopscope:
- click on the graph to go to slice view
- click the main view
-> main view is positioned incorrectly (see pic)
For Gerrit Dashboard: QTBUG-127502 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
579819,3 | Fix subview updating for background rendering | dev | qt/qtgraphs | Status: MERGED | +2 | 0 |
580191,2 | Fix subview updating for background rendering | 6.8 | qt/qtgraphs | Status: MERGED | +2 | 0 |