Fix subview updating for background rendering

Fixes: QTBUG-127502
Change-Id: Icdfb03fa7b4d8bfb3a9dfeae311c7748471cb1af
Reviewed-by: Tomi Korpipää <tomi.korpipaa@qt.io>
(cherry picked from commit 785bf606060051e6fa782869b88ab58ef79e2e89)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>